# BMI-Prediction

./: README.md  bmi_prediction.ipynb  data_utils.py  model.py  pyproject.toml  requirements.txt  solver.py
deployment/: Dockerfile  RobustScaler.pkl  app.py  requirements.txt
